# styles

./: Cargo.toml  README.md  build.rs  styles.css  styles.toml
.idx/: dev.nix
inspirations/: README.md
src/: data_manager.rs  engine.rs  generator.rs  main.rs  page.tsx  parser.rs  styles.fbs  utils.rs  watcher.rs
