[package]
name = "dx"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
flatbuffers = "25.2.10"
flatc-rust = "0.2.0"
notify = "8.2.0"
oxc_allocator = "0.80.0"
oxc_ast = "0.80.0"
oxc_parser = "0.80.0"
oxc_span = "0.80.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
walkdir = "2.5.0"

[build-dependencies]
flatc-rust = "0.2.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
flatbuffers = "25.2.10"
